# tvbridge

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.md  research-topic.md
.github/workflows/: ci.yml
docs/: README.md  architecture.md  contributing.md
docs/research-topics/: axelar-amplifier.md  hyperlane-isms.md  ibc-overview.md  layerzero-v2.md  light-clients.md  recursive-proofs.md  wormhole-vaa.md  zk-snarks.md  zk-starks.md  zkvms-sp1-risc0.md
src/examples/: list_episodes.py  list_topics.py
src/tvbridge/: __init__.py
src/tvbridge/catalog/: __init__.py  episodes.py  topics.py
src/tvbridge/core/: __init__.py  episode.py  schedule.py  topic.py
src/tvbridge/utils/: __init__.py  markdown.py  slugify.py
src/tvbridge/validators/: __init__.py  topic_validator.py
tests/: test_episode.py  test_slugify.py  test_topic.py  test_validator.py
