[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tvbridge"
version = "0.4.2"
description = "VHS-style broadcast catalog for ZK proof systems and cross-chain interoperability research"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "tvbridge-yt" }
]
keywords = ["zero-knowledge", "interoperability", "bridges", "research", "broadcast"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://tvb.yt"
Repository = "https://github.com/tvbridge-yt/tvbridge"
Twitter = "https://twitter.com/tvb_yt"

[tool.setuptools.packages.find]
where = ["src"]
include = ["tvbridge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
